# switchproof

./: .env.example  .gitignore  LICENSE  README.md  REPORT.md  SWITCHPROOF_ONEPAGER.md  TRUST_FAILURES.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
archive/verifier/: README_verifier.md  REPORT.md  ROADMAP.md
archive/verifier/benchmark/: answers_hard.jsonl  citations.jsonl  hard_cases.jsonl  mixed_answers.jsonl  numeric.jsonl  temporal.jsonl
archive/verifier/examples/: sample_answer.txt
archive/verifier/launch/: linkedin.md
archive/verifier/second_opinion/: __init__.py  ablation.py  cache.py  cli.py  generate.py  honesty.py  mixedeval.py  pipeline.py  providers.py  report.py
archive/verifier/second_opinion/switch/: __init__.py  data.py
benchmark/: answers.jsonl  calibration.json  hard_mode.jsonl  unverifiable.jsonl
frontend/src/components/settings/: AppearanceSettingsPage.tsx
launch/: linkedin.md
second_opinion/: answereval.py  calibration.py  config.py  doctor.py  eval.py  fit_calibration.py  inspect.py  models.py  robustness.py  stats.py  web.py
switchproof/: __init__.py  cache.py  config.py  data.py  doctor.py  evaluate.py  run.py  runners.py  stats.py
switchproof/data/: _build_mock.py  banking77_mock.jsonl
web/: index.html  package-lock.json  package.json  vite.config.js  vite.config.js.timestamp-1783016561681-38736cdb96774.mjs
web/public/: report.json
web/src/: App.jsx  styles.css
